--- a/UnitTestProject1/UnitTestProject1.csproj
+++ b/UnitTestProject1/UnitTestProject1.csproj
@@ -50,7 +50,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayProcessor.cs" />
+    <Compile Include="FileService.cs" />
+    <Compile Include="FileSrvice.cs" />
     <Compile Include="Rectangle.cs" />
+    <Compile Include="ReportViewer.cs" />
     <Compile Include="ReturnNullState.cs" />
     <Compile Include="StringFormatter.cs" />
     <Compile Include="UnitTest1.cs" />
